force-app/main/default/objects/Invoice__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <inlineHelpText>The total discount for the invoice</inlineHelpText>
    <label>Discount Amount</label>
    <summarizedField>InvoiceLine__c.DiscountAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>