force-app/main/default/objects/Invoice__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <defaultValue>TODAY() + 7</defaultValue>
    <inlineHelpText>Due date for the customer/sponsor to pay the amount. Default is Invoice created date + 7</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>