force-app/main/default/objects/Invoice__c/fields/GrandTotal__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal__c</fullName>
    <inlineHelpText>The final amount of the Invoice</inlineHelpText>
    <label>Grand Total</label>
    <summarizedField>InvoiceLine__c.GrandTotal__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>