force-app/main/default/objects/Invoice__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Date when the invoice was generated for the customer</inlineHelpText>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>