force-app/main/default/objects/Invoice__c/fields/InvoiceUrl__c.field-meta.xml
<CustomField>
    <fullName>InvoiceUrl__c</fullName>
    <inlineHelpText>The Url of the Invoice that will be sent to customer for payment.</inlineHelpText>
    <label>Invoice Url</label>
    <type>Url</type>
</CustomField>