force-app/main/default/objects/Invoice__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Total quantity for the Invoice including the tax &amp; discount products</inlineHelpText>
    <label>Quantity</label>
    <summarizedField>InvoiceLine__c.Quantity__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>