force-app/main/default/objects/Invoice__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related sponsor for which the invoice is created!</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>Sponsor__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>