force-app/main/default/objects/Invoice__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <inlineHelpText>Total Tax Amount</inlineHelpText>
    <label>Tax Amount</label>
    <summarizedField>InvoiceLine__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>