force-app/main/default/objects/Invoice__c/validationRules/Event_is_required_to_select.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_is_required_to_select</fullName>
    <active>true</active>
    <description>Event is required to select in order to create the record.</description>
    <errorConditionFormula>ISBLANK(Event__c)</errorConditionFormula>
    <errorDisplayField>Event__c</errorDisplayField>
    <errorMessage>Event is required to select in order to create the record.</errorMessage>
</ValidationRule>