force-app/main/default/objects/Invoice__c/validationRules/Sponsor_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sponsor_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(  Sponsor__c  )</errorConditionFormula>
    <errorDisplayField>Sponsor__c</errorDisplayField>
    <errorMessage>Sponsor is required to select in order to create the record</errorMessage>
</ValidationRule>