force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Event__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>DueDate__c</columns>
    <columns>GrandTotal__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>